--- a/pagina2.html
+++ b/pagina2.html
@@ -22,6 +22,6 @@
     <li>Fotografía</li>
     <li>Diseño gráfico</li>
     </ul>
-    <a href="examen.html">volver a la pagina principal</a>
+    <a href="index.html">volver a la pagina principal</a>
 </body>
 </html>
